; ModuleID = '/home/carl/AnghaBench/htop/linux/extr_LinuxProcessList.c_LinuxProcess_adjustTime.c'
source_filename = "/home/carl/AnghaBench/htop/linux/extr_LinuxProcessList.c_LinuxProcess_adjustTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@jiffy = common dso_local global double 0.000000e+00, align 8
@_SC_CLK_TCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @LinuxProcess_adjustTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @LinuxProcess_adjustTime(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca double, align 8
  store i64 %0, i64* %2, align 8
  %4 = load double, double* @jiffy, align 8
  %5 = fcmp oeq double %4, 0.000000e+00
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* @_SC_CLK_TCK, align 4
  %8 = call double @sysconf(i32 %7)
  store double %8, double* @jiffy, align 8
  br label %9

9:                                                ; preds = %6, %1
  %10 = load double, double* @jiffy, align 8
  %11 = fdiv double 1.000000e+00, %10
  store double %11, double* %3, align 8
  %12 = load i64, i64* %2, align 8
  %13 = uitofp i64 %12 to double
  %14 = load double, double* %3, align 8
  %15 = fmul double %13, %14
  %16 = fmul double %15, 1.000000e+02
  %17 = fptoui double %16 to i64
  ret i64 %17
}

declare dso_local double @sysconf(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
